@@ -9,6 +9,13 @@ class TickEvent(Event):
         self.bid = bid
         self.ask = ask
 
+class SignalEvent(Event):
+    def __init__(self, instrument, order_type, side):
+        self.type = "SIGNAL"
+        self.instrument = instrument
+        self.order_type = order_type
+        self.side = side
+
 class OrderEvent(Event):
     def __init__(self, instrument, units, order_type, side):
         self.type = "ORDER"
