@@ -4,11 +4,12 @@ import time
 
 from execution import Execution
 from settings import STREAM_DOMAIN, API_DOMAIN, ACCESS_TOKEN, ACCOUNT_ID
-from randomstrategy import TestRandomStrategy
-from momentum import momentumstrat
+from portfolio import Portfolio
+from strategy.randomstrategy import TestRandomStrategy
+from strategy.momentum import momentumstrat
 from streaming import StreamingForexPrices
 
-def trade(events, strategy, execution):
+def trade(events, strategy, portfolio, execution):
     while True:
         try:
             event = events.get(False)
@@ -18,6 +19,8 @@ def trade(events, strategy, execution):
             if event is not None:
                 if event.type == "TICK":
                     strategy.calculate_signals(event)
+                elif event.type == "SIGNAL":
+                    portfolio.execute_signal(event)
                 elif event.type == "ORDER":
                     print("Executing order!")
                     execution.execute_order(event)
@@ -35,11 +38,14 @@ if __name__ == "__main__":
             instrument, events
             )
 
+    portfolio = Portfolio(prices, events, equity=100000.0) #TODO: decimal, dynamic
+
     execution = Execution(API_DOMAIN, ACCESS_TOKEN, ACCOUNT_ID)
 
-    strategy = momentumstrat(instrument, units, events)
+    strategy = TestRandomStrategy(instrument, units, events)
 
-    trade_thread = threading.Thread(target=trade, args=(events, strategy, execution))
+    trade_thread = threading.Thread(target=trade, args=(events, strategy, portfolio, execution))
+    
     price_thread = threading.Thread(target=prices.stream_to_queue, args=[])
 
     trade_thread.start()
